[package]
name = "rusty_sr"
version = "0.1.1"
authors = ["James Millard <millard.jn@gmail.com>"]

[dependencies]
rand = "0.3"
clap = "2"
image = "0.12"
bytevec = "0.2.0"
#alumina = {path = "D:/Repositories/alumina", features = ["images"]}
#alumina = { version = "0.1" , features = ["images"]}

[dependencies.alumina]
git = "https://github.com/millardjn/alumina.git"
branch = "GraphRewrite"
#path = "D:/Repositories/alumina"
features = ["images"]