[package]
name = "rusty_sr"
version = "0.2.0"
authors = ["James Millard <millard.jn@gmail.com>"]

[dependencies]
rand = "0.3"
clap = "2"
image = "0.17"
ndarray = {version = "0.10", features = ["serde-1"] }
serde = "1"
serde_derive = "1"
bincode = "0.9.2"
xz2 = "0.1"
byteorder = "1"
#alumina = { version = "0.2.0" , features = ["images"]}
alumina = { path = "D:/Repositories/alumina"}
