[package]
name = "rusty_sr"
version = "0.2.0"
authors = ["James Millard <millard.jn@gmail.com>"]

[dependencies]
rand = "0.5"
clap = "2"
image = "0.19"
ndarray = {version = "0.11.2", features = ["serde-1"] }
serde = "1"
serde_derive = "1"
bincode = "1.0.1"
xz2 = "0.1"
byteorder = "1"
indexmap = "1"
smallvec = "0.6"
#alumina = { version = "0.2.0" , features = ["images"]}
alumina = { path = "D:/Repositories/alumina"}